<resources>
    <string name="app_name">QR-Ticket</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">QR-Ticket</string>
    <string name="nav_header_subtitle">vic613@oum.edu.my</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_ticket">Ticket</string>
    <string name="menu_adminticket">Ticket</string>


    <string name="home_second">Home Second</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome ! "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_picture_barcode">PictureBarcodeActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_message">QR-Ticket</string>
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="msg_token_fmt">Subscribed to weather topic</string>
    <string name="default_notification_channel_name">Subscribed </string>

</resources>
