<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.qr_ticket.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
    </fragment>
    <fragment
        android:id="@+id/nav_ticket"
        android:name="com.example.qr_ticket.ui.ticket.TicketFragment"
        android:label="@string/menu_ticket"
        tools:layout="@layout/fragment_ticket" />
    <fragment
        android:id="@+id/nav_adminticket"
        android:name="com.example.qr_ticket.ui.admin.AdminTicketFragment"
        android:label="@string/menu_adminticket"
        tools:layout="@layout/fragment_admin_ticket" />
</navigation>